fix: align text

--- a/CSS/SCSS/_header.scss
+++ b/CSS/SCSS/_header.scss
@@ -52,7 +52,7 @@
     color: #5cfc3c;
     text-decoration: none;
     text-transform: uppercase;
-    font-family: "Krona One";
+    font-family: "Korona One";
     font-style: normal;
     font-weight: normal;
   }
