--- a/CSS/SCSS/_main.scss
+++ b/CSS/SCSS/_main.scss
@@ -33,6 +33,7 @@
     line-height: 48px;
     color: #ffffff;
     text-transform: uppercase;
+    text-align: center;
   }
 
   &__counter {
