--- a/CSS/style.css
+++ b/CSS/style.css
@@ -95,7 +95,7 @@ body {
   color: #5cfc3c;
   text-decoration: none;
   text-transform: uppercase;
-  font-family: "Krona One";
+  font-family: "Korona One";
   font-style: normal;
   font-weight: normal;
 }
@@ -165,6 +165,7 @@ body {
   line-height: 48px;
   color: #ffffff;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .main__counter {
